--- a/HTML1.html
+++ b/HTML1.html
@@ -43,7 +43,11 @@
     </div>
 
     <div class="share">
-        <p>Lets Connect</p>
+        <p>Lets Connect</p
+         <p><</p>
+		 <p><</p>
+		 <p><</p>
+		 <p>.<</p>
         <div class="social">
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
